crates/mockql-core/src/graphql/snapshots/response_validator/mockql_core__graphql__response_validator__tests__validate_response@reads_aliased_response_keys.json.snap
---
source: crates/mockql-core/src/graphql/response_validator.rs
input_file: crates/mockql-core/src/graphql/snapshots/response_validator/reads_aliased_response_keys.json
---
{
  "data": {
    "currentUser": {
      "displayName": "Ada Lovelace"
    }
  }
}
