crates/mockql-core/src/graphql/snapshots/response_validator/mockql_core__graphql__response_validator__tests__validate_response@removes_unselected_fields.json.snap
---
source: crates/mockql-core/src/graphql/response_validator.rs
input_file: crates/mockql-core/src/graphql/snapshots/response_validator/removes_unselected_fields.json
---
{
  "data": {
    "me": {
      "id": "1",
      "name": "Ada Lovelace"
    }
  }
}
