crates/mockql-core/src/graphql/snapshots/response_validator/mockql_core__graphql__response_validator__tests__validate_response@response_fields_are_in_correct_order.json.snap
---
source: crates/mockql-core/src/graphql/response_validator.rs
input_file: crates/mockql-core/src/graphql/snapshots/response_validator/response_fields_are_in_correct_order.json
---
{
  "data": {
    "me": {
      "id": "1",
      "name": "Ada Lovelace",
      "createdAt": "2026-08-10T00:00:00Z"
    }
  }
}
