crates/mockql-core/src/graphql/snapshots/response_validator/mockql_core__graphql__response_validator__tests__validate_response@uses_mutation_root_type.json.snap
---
source: crates/mockql-core/src/graphql/response_validator.rs
input_file: crates/mockql-core/src/graphql/snapshots/response_validator/uses_mutation_root_type.json
---
{
  "data": {
    "createProduct": {
      "id": "1",
      "name": "Keyboard"
    }
  }
}
